[project]
name = "c-helpers"
description = "Helpers for c-structs sizes and offsets"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["c", "struct"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/c-helpers"
"Bug Reports" = "https://github.com/doronz88/c-helpers/issues"

[project.scripts]
c-struct = "c_helpers.__main__:c_struct"
c-const = "c_helpers.__main__:c_const"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = {attr = "c_helpers._version.__version__"}

[tool.setuptools_scm]
version_file = "c_helpers/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
